--- a/style.css
+++ b/style.css
@@ -119,11 +119,22 @@ ul li{
     cursor: pointer;
     transform: translateX(0px);
     transition: transform 0.3s;
+    margin:20px;
 }
 
 ul li:hover{
+    position: relative;
     transform: translateX(20px);
     transition: transform 0.3s;
+}
+
+ul li:hover::after{
+    content:"";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: var(--theme-color);
 }
 
 .link-list-hidden{
